crates/carta/tests/snapshots/golden_writer__rst__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
======================= ============== == ==
A                       B              C  D
======================= ============== == ==
.. raw:: html           .. raw:: latex -  ok
                                       -  
   <!-- placeholder -->    \vskip         
======================= ============== == ==
