crates/carta/tests/snapshots/golden_writer__rst__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
   = =
   a b
   = =
   1 2
   = =
