crates/carta/tests/snapshots/golden_writer__rst__table__table-multiple-bodies.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
== ==
h1 h2
== ==
a1 a2
b1 b2
== ==
