crates/carta/tests/snapshots/golden_writer__rst__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
+------+---+
| tall | a |
|      +---+
|      | b |
+------+---+
