crates/carta/tests/snapshots/golden_writer__rst__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. table:: The full caption text

   +---+
   | h |
   +===+
   | v |
   +---+
