crates/carta/tests/snapshots/golden_writer__rst__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
== ==
h1 h2
== ==
a  b
== ==
